workshop05/setup/chaosmesh-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-httproute
  namespace: chaos-mesh
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    port: 8000
  hostnames:
  #TODO: change to TRAEFIK IP address
  - chaos-TRAEIK_IP.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: chaos-dashboard
      namespace: chaos-mesh
      port: 2333
